--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
-    "pug": "^2.0.3"
+    "nodemon": "^1.18.11",
+    "pug": "^2.0.3",
+    "socket.io": "^2.2.0"
   }
 }
