--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "nodemon": "^1.18.11",
+    "pg-promise": "^8.6.5",
     "pug": "^2.0.3",
     "socket.io": "^2.2.0"
   }
