--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,14 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-config-vue": "^2.0.2",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0",
     "vue": "^2.6.10",
+    "vue-router": "^3.0.6",
     "vue-socket.io": "^3.0.7",
     "vuex": "^3.1.0"
   },
