--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
     "vue": "^2.6.10",
+    "vue-material": "^1.0.0-beta-7",
     "vue-router": "^3.0.6",
     "vue-socket.io": "^3.0.7",
+    "vuejs-dialog": "^1.4.0",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
