--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^1.18.11",
     "pg-promise": "^8.6.5",
     "pug": "^2.0.3",
+    "redis": "^2.8.0",
     "socket.io": "^2.2.0"
   }
 }
