--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
+    "sha1": "^1.1.1",
     "vue": "^2.6.10",
+    "vue-cookies": "^1.5.13",
     "vue-material": "^1.0.0-beta-7",
     "vue-router": "^3.0.6",
     "vue-socket.io": "^3.0.7",
