--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,13 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.25",
     "sha1": "^1.1.1",
     "vue": "^2.6.10",
     "vue-cookies": "^1.5.13",
     "vue-material": "^1.0.0-beta-7",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.6",
     "vue-socket.io": "^3.0.7",
     "vuejs-dialog": "^1.4.0",
