--- a/backend/package.json
+++ b/backend/package.json
@@ -6,16 +6,24 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "config": "^3.1.0",
+    "connect-flash": "^0.1.1",
+    "connect-redis": "^3.4.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^7.0.0",
     "ejs": "^2.6.1",
     "express": "~4.16.0",
     "express-ejs-extend": "0.0.1",
+    "express-session": "^1.16.1",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "nodemon": "^1.18.11",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport.socketio": "^3.7.0",
     "pg-promise": "^8.6.5",
     "pug": "^2.0.3",
     "redis": "^2.8.0",
