--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "acorn": "^6.1.1",
+    "acorn-dynamic-import": "^4.0.0",
     "core-js": "^2.6.5",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.17.2",
@@ -16,8 +18,11 @@
     "eslint-plugin-standard": "^4.0.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.25",
+    "node-sass": "^4.12.0",
+    "passport-local": "^1.0.0",
     "sha1": "^1.1.1",
     "vue": "^2.6.10",
+    "vue-authenticate": "^1.4.1",
     "vue-cookies": "^1.5.13",
     "vue-material": "^1.0.0-beta-7",
     "vue-moment": "^4.0.0",
@@ -34,6 +39,8 @@
     "eslint": "^5.16.0",
     "eslint-config-vue": "^2.0.2",
     "eslint-plugin-vue": "^5.2.2",
+    "sass": "^1.19.0",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
