--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "~4.16.0",
     "express-ejs-extend": "0.0.1",
     "express-session": "^1.16.1",
+    "express-socket.io-session": "^1.3.5",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
@@ -24,6 +25,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport.socketio": "^3.7.0",
+    "pg": "^7.10.0",
     "pg-promise": "^8.6.5",
     "pug": "^2.0.3",
     "redis": "^2.8.0",
