Big commit - bring prj to functional state
Bunch of minor changes/fixes that bring the project to a mostly
functional state.

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,2 +1,3 @@
+# test
 VUE_APP_API_URL=http://lab.lizardgizzards.com:4001
-VUE_APP_ACTION_CABLE_URL=ws://lab.lizardgizzards.com:4001/cable/
+VUE_APP_ACTION_CABLE_URL=ws://lab.lizardgizzards.com:4000/api/cable/
