--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,3 +1,8 @@
-# test
-VUE_APP_API_URL=http://lab.lizardgizzards.com:4001/api
+# Make sure this is using the frontend port.
+VUE_APP_API_URL=http://lab.lizardgizzards.com:4000/api
+
+# Make sure this uses the backend port.
+VUE_APP_API_PROXY_TO_URL=http://lab.lizardgizzards.com:4001/
+
+# This should use the frontend port.
 VUE_APP_ACTION_CABLE_URL=ws://lab.lizardgizzards.com:4000/api/cable/
