--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
     "moment-timezone": "^0.5.25",
-    "node-sass": "^4.12.0",
+    "node-sass": "4.12.0",
+    "octicons-vue": "^1.0.2",
     "sass-loader": "^7.1.0",
     "sha1": "^1.1.1",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
     "vue-moment": "^4.0.0",
+    "vue-octicon": "^2.1.1",
     "vue-router": "^3.0.3",
     "vue-socket.io": "^3.0.7",
     "vuejs-dialog": "^1.4.0",
