Get the project into a working state

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,8 +1,8 @@
 # Make sure this is using the frontend port.
-VUE_APP_API_URL=http://dev.lizardgizzards.com:4000/api
+VUE_APP_API_URL=http://localhost:4000/api
 
 # Make sure this uses the backend port.
-VUE_APP_API_PROXY_TO_URL=http://dev.lizardgizzards.com:4001/
+VUE_APP_API_PROXY_TO_URL=http://localhost:4001/
 
 # This should use the frontend port.
-VUE_APP_ACTION_CABLE_URL=ws://dev.lizardgizzards.com:4000/api/cable/
+VUE_APP_ACTION_CABLE_URL=ws://localhost:4000/api/cable/
