--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -1,7 +1,9 @@
 source 'https://rubygems.org'
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
-ruby '2.6.1'
+ruby '2.6.6'
+
+gem 'rake', '~> 13.0.0'
 
 gem 'pg'
 gem 'rack-cors'
@@ -51,6 +53,7 @@ group :development do
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0.0'
+  gem 'wdm', '>= 0.1.0' if Gem.win_platform?
 end
 
 group :test do
