--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
-VUE_APP_API_URL=http://vuechat.blainelafreniere.io:3002
-VUE_APP_ACTION_CABLE_URL=ws://vuechat.blainelafreniere.io:3002/cable/
+VUE_APP_API_URL=http://vuechat-api.blainelafreniere.io
+VUE_APP_ACTION_CABLE_URL=ws://vuechat-api.blainelafreniere.io/cable/
