attempt to set cookie domain to fix cookie issue

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -6,3 +6,5 @@ VUE_APP_API_PROXY_TO_URL=http://localhost:4001/
 
 # This should use the frontend port.
 VUE_APP_ACTION_CABLE_URL=ws://localhost:4000/api/cable/
+
+VUE_APP_COOKIE_DOMAIN=localhost
