--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "sass-loader": "^7.1.0",
     "sha1": "^1.1.1",
     "vue": "^2.6.10",
+    "vue-async-computed": "^3.8.2",
     "vue-axios": "^2.1.4",
     "vue-moment": "^4.0.0",
     "vue-octicon": "^2.1.1",
