--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,3 @@
-VUE_APP_API_URL=http://vuechat-api.blainelafreniere.io
-VUE_APP_ACTION_CABLE_URL=ws://vuechat-api.blainelafreniere.io/cable/
+VUE_APP_API_URL=https://vuechat-api.blainelafreniere.io
+VUE_APP_ACTION_CABLE_URL=wss://vuechat-api.blainelafreniere.io/cable/
 VUE_APP_COOKIE_DOMAIN=blainelafreniere.io
